--- a/htmls/event/event_pubb.html
+++ b/htmls/event/event_pubb.html
@@ -19,7 +19,7 @@
 				<div class="lir"><input style="width:30px;" name="fr" value="0"/>&nbsp&nbsp至&nbsp&nbsp<input style="width:30px;"  name="to" value="30"/></div>
 			</div>
 			<div class="li"><label class="lil">集合时间<em class="needed">*</em></label><div class="lir"><script>toggleDate("collect_time", 0,7,30)</script></div></div>
-			<div class="li" style="display:none;"><label class="lil">集合地点<em class="needed">*</em></label><div class="lir"></div></div>
+			<div class="li"><label class="lil">集合地点<em class="needed">*</em></label><div class="lir"></div></div>
 			<div class="li"><label class="lil"><input type="hidden" name="eid" value="{{eid}}"><em class="needed"></em></label><div class="lil"><input type="submit" value="提交"></div></div>
 		</form>
 	</div>
