--- a/htmls/map/item.html
+++ b/htmls/map/item.html
@@ -1,39 +1,29 @@
 {% extends ../frame.html %}
 
 {% block static %}
-
-{% comment <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> %}
-{% comment <script type="text/javascript" src="{{ static_url('js/jquery.map.js') }}"></script> %}
-	<script type="text/javascript" src="{{ static_url('js/map.js') }}"></script>
-	<script type="text/javascript">
-/*		$(document).ready(function() {
-			var map = yhui.iMap.createMap($('#map_canvas'), {width: 700, height: 500, panControl: false, mapTypeControl: false,
-				zoomControlOptions: {style: google.maps.ZoomControlStyle.SMALL},
-				markControl: true, markCallback: function(){alert('mark failure')},
-				routeControl: true, routeCallback: function(){alert('route failure')},
-				searchControl: true, searchCallback: function(){alert('search failure')},
-			});
-			var latlng = new google.maps.LatLng(34.725737, 135.235871);
-			map.setCenter(latlng);
-			map.setZoom(8);
-		});
-*/	</script>
-
-	{% block static-added %}{% end %}
-	<link rel="stylesheet" type="text/css" href="{{ static_url('css/map.css') }}"/>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&sensor=false"></script>
+	<script type="text/javascript" src="{{ static_url('js/jquery.map.js') }}" ></script>
 {% end %}
 {% block bodyleft %}
-	<div id="wrapper" class="fwrap" style="background:white;padding:15px;height:600px;width:745px;">
-		<div id="map_canvas" style="width:600px; height:600px"></div>
-	</div>
+	<div id="map_canvas" ipLocID="location" ipRouteID="route" style="width:600px; height:600px"></div>
+	<script type="text/javascript">
+		var map = yhui.iMap.createMap($('#map_canvas'), {width: 700, height: 550, panControl: false, mapTypeControl: false,
+			zoomControlOptions: {style: google.maps.ZoomControlStyle.SMALL},
+			markControl: true, markCallback: function(){alert('mark failure')},
+			routeControl: true, routeCallback: function(){alert('route failure')},
+			searchControl: true, searchCallback: function(){alert('search failure')},
+		});
+		var latlng = new google.maps.LatLng(37.026952434983365, 104.20023437500002);
+		map.setCenter(latlng);
+		map.setZoom(4);
+	</script>
 {% end %}
 {% block bodyright %}
-	<div class="ablbox boxmg left" style="width:200px;">
-		<form action="/map/" method="post">
-			<select name="points" id="points" size=10 style="width:100%;">
-				<option value="1">(41.85380,-87.63304) Level:3</option>
-			</select>
-			<input type=submit value="submit">
-		</form>
-	</div>
 {% end %}
+
+
+
+
+
+
+
