--- a/htmls/profile/profile.html
+++ b/htmls/profile/profile.html
@@ -4,5 +4,8 @@
 	{% block static-added %}{% end %}
 {% end %}
 {% block bodyleft %}
+<i class="icon-search"></i>
+<i class="icon-search icon-white"></i>
+
 {% end %}
 {% block bodyright %}{% end %}
