--- a/htmls/util/state_toggle.html
+++ b/htmls/util/state_toggle.html
@@ -1,1 +1,1 @@
-<div><a id="{{ id }}" switch="{{ switch }}" kind="{{ kind }}" href="#" url="/a/toggle/state" onclick="toggleState(this);return false;">{{ value }}</a></div>
+<div><a class="btn-success btn" id="{{ id }}" switch="{{ switch }}" kind="{{ kind }}" href="#" url="/a/toggle/state" onclick="toggleState(this);return false;">{{ value }}</a></div>
