--- a/htmls/alert.html
+++ b/htmls/alert.html
@@ -1,9 +1,7 @@
 {% extends box.html %}
 
 {% block static %}{% end %}
-{% block box %}
-	<div class="gybox" style="width:500px;min-height:300px;margin:100px auto;">
-		<pre style="color:orange;font-size:40px;margin:0 auto;text-align:center;">{{ alert }}</pre>
-		<form><textarea rows=3 cols=60></textarea><br/><input type="submit" value="提意见">&nbsp&nbsp&nbsp<a style="font-size:16px;" href="/">没意见<a></form>
-	</div>
+{% block bodyleft %}
+	<pre style="color:orange;font-size:40px;margin:0 auto;text-align:center;line-height:50px;" class="well">{{ alert }}</pre>
 {% end %}
+{% block bodyright %}<div class="well"><a href="/">回首页</a></div>{% end %}
