--- a/htmls/box.html
+++ b/htmls/box.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="cn">
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta name="description" content="">
-		<meta property="wb:webmaster" content="98499125f4d97e8f" />
-		<meta property="qc:admins" content="105143144761516016761667" />
-		<meta name="robots" content="noodp"><title>远航户外</title>
-		<link rel="stylesheet" href="{{ static_url('css/frame.css') }}">
+		<meta charset="utf-8">
+		<title>远航户外</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="驴友 户外 垂直 社区">
+		<meta name="author" content="一米七三">
+		<script src="{{ static_url('js/bs/html5.js') }}"></script>
+		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
 		{% block static %}{% end %}
+		<link href="{{ static_url('css/bootstrap.css') }}" rel="stylesheet">
+		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
+		<link rel="shortcut icon" href="./favicon.ico">
 	</head>
-	<body style="background-image: url({{ static_url('img/bg.png') }});background-repeat: repeat;background-attachment: fixed;background-position: left top;">
-		{% if warning %}<span id="warning" style="color:red;font-size:12px;">{{ warning }}</span>{% end %}
-		<div id="box">{% block box %}{% end %}</div>
-	</body>
+	<body data-spy="scroll" data-target=".subnav" data-offset="50">
+		<div class="container">
+			<div class="row">
+				<div class="span7">
+					{% block bodyleft %}{% end %}
+				</div>
+				
+				<div class="span5">
+					{% block bodyright %}{% end %}
+				</div>
+			</div>
+		<footer class="footer">
+			{% block foot %}{% end %}
+			<p class="pull-right"><a href="#">Back to top</a></p>
+		</footer>
+    </div><!-- /container -->
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript" src="{{ static_url('js/bs/widgets.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/prettify.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-transition.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-alert.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-modal.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-dropdown.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-scrollspy.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-tab.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-tooltip.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-popover.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-button.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-collapse.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-carousel.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/bootstrap-typeahead.js') }}"></script>
+    <script type="text/javascript" src="{{ static_url('js/bs/application.js') }}"></script>
+  </body>
 </html>
