--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -3,14 +3,17 @@
 {% block static %}
 	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
-		$(document).ready(function() {Weibo.init();})
+		$(document).ready(function() {
+			Weibo.init();
+			$('#nav-event').addClass("active");
+			})
 	</script>
 	{% block static-added %}{% end %}
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/event.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/weibo.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<div id="showdetail">
+	<div id="showdetail" class="well">
 		<img width=300 height=300 src="/image/attach/{{logo}}_300"/>
 		<div style="border-bottom:1px solid #FFCC00;">
 			<h4>活动信息</h4>
@@ -22,28 +25,21 @@
 			<p>活动地点：{{ place }}</p>
 			<p>活动开始时间：{{ date }}</p>
 		</div>
-		<div style="border-bottom:1px solid #FFCC00;">
-			<h4>报名信息</h4>
-			<p>报名截止时间：{{ deadline }}</p>
-			<p>报名人数：{{ fr }} 到 {{ to }}</p>
-			<p>集合时间：{{ when }}</p>
-			<p>集合地点：{{ where }}</p>
-		</div>
 		<p>计划安排：{{ schedule_tl }}</p>
 		<p>花费统计：{{ spend_tl }}</p>
 		<p style="display:none;">装备要求：{{ equip }}</p>
-		<p>免责声明：{{ declare_tl }}</p>
-		<p>注意事项：{{ attention_tl }}</p>
+		<p>{% if declare_tl %}免责声明：{{ declare_tl }}{% end %}</p>
+		<p>{% if attention_tl %}注意事项：{{ attention_tl }}{% end %}</p>
 		<p style="display:none;">人员配置：{{ members }}</p>
 	</div>
 	<div style="clear:both;"></div>
 	<div id="weibo" name="weibo">
-		<div class="num" style="display:block;font-size:16px;">还可以输入
+		<div class="num" style="display:block;font-size:16px;margin-bottom:5px;">还可以输入
 			<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字
 		</div>
 		<form action="/weibo" method="post" id="weiboform">
-			<textarea rows="5" cols="60" name="content" id="weibo-content">#{{ title }}#</textarea>
-			<input type="submit" value="回复" style="height:20px;">
+			<textarea rows="2" cols="90%" style="width:85%;" name="content" id="weibo-content">#{{ title }}#</textarea>
+			<input type="submit" class="btn-large btn-primary" value="发布" style="margin-top:5px;margin-left:20px;">
 			<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a">
 		</form><br/><hr/>
 		<div class="wb_items" maintype="{{ tid }}" subtype="" title="#{{ title }}#">
@@ -52,21 +48,24 @@
 	</div>
 {% end %}
 {% block bodyright %}
-	<div class="agrbox boxmg left" style="width:200px;"><p>
+	{% if user_list %}
+	<div class="well">
+		<a href="/event/{{ eid }}/member/">报名列表</a>
+	</div>
+	{% end %}
+	
+	{% if uid == owner %}<div class="well"><a class="btn btn-warning" href="/event/{{ tid }}/approval/">报名审核</a></div>{% end %}
+	
+	<div class="well">
+		<h4>报名信息</h4>
+		<p>报名截止时间：{{ deadline }}</p>
+		<p>报名人数：{{ fr }} 到 {{ to }}</p>
+		<p>集合时间：{{ when }}</p>
+		<p>集合地点：<a href="/map/{{ where }}/" target="_blank">点击查看</a></p>
 		{% if is_join %}
 			{% module Template("util/state_toggle.html", id=id, kind='join', switch='报名参加', value='退出活动') %}
 		{% else %}
 			{% module Template("util/state_toggle.html", id=id, kind='join', switch='退出活动', value='报名参加') %}
 		{% end %}
-	</p></div>
-	{% if user_list %}
-	<div class="agrbox boxmg left" style="width:200px;"><p>
-		<h5>报名列表</h5>
-		<ul class="user_list">
-		{% for u in user_list %}
-			<li><img src="/image/avatar/{{u['owner']}}_50" width=50 height=50 /><span>{{u['nick']}}</span></li>
-		{% end %}
-		</ul>
-	</p></div>
-	{% end %}
+	</div>
 {% end %}
