--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -1,79 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="cn">
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta name="description" content="">
-		<meta name="robots" content="noodp"><title>远航户外</title>
+		<meta charset="utf-8">
+		<title>远航户外</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="驴友 户外 垂直 社区">
+		<meta name="author" content="一米七三">
+		<script src="{{ static_url('js/bs/html5.js') }}"></script>
 		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
-		<script src="{{ static_url('js/plugin/jquery.fancybox.pack.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
-		<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
-		<script language="javascript" type="text/javascript">
-			$(document).ready(function() {
-				$('.fancybox').fancybox();
-			})
-		</script>
-		<link rel="stylesheet" href="{{ static_url('css/frame.css') }}">
-		<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery.fancybox.css') }}" media="screen"/>
 		{% block static %}{% end %}
-		<link rel="shortcut icon" href="" type="image/x-icon">
+		<link href="{{ static_url('css/bootstrap.css') }}" rel="stylesheet">
+		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
+		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
+		<link rel="shortcut icon" href="./favicon.ico">
 	</head>
-	<body style="background-image: url({{ static_url('img/bg.png') }});background-repeat: repeat;background-attachment: fixed;background-position: left top;">
-		<div id="shell">
-			<div id="header">
-				<img width=200 height=50 src="{{static_url('img/logo.png')}}" title="远航户外"/>
-				<div id="navi" class="grbox boxmg">
-					<span><a href="/weibo/">微博</a></span>
-					<span><a href="/event/">活动</a></span>
-					<span><a href="">相册</a></span>
-					<span><a href="/map/">地图</a></span>
-					<span><a href="">装备</a></span>
-					<input type="text" value="活动 相册" style="border:1px solid #D6D6D6;color:#C0C0C0;background:#F5F5F5;height:28px;width:200px;"/>
-					&nbsp&nbsp<input type="submit" value="搜索"/>
-				</div>
-				<div id="opt" class="ylbox boxmg">
-				{% if current_user %}
-					<span><a>邮</a></span>
-					<span><a>私</a></span>
-					<span id="userinfo">
-						<a onclick="showUinfo(this);return false;" href="#">{{ truncate(current_user) }}<img width=30 height=30 src="/image/avatar/{{uid}}_30"/></a>
-						<ul>
-							<li><a href="/account/profile/"><img width=30 height=30 src="/image/avatar/{{uid}}_30"/><span>主页</span></a></li>
-							<li><a href="/account/setting/"><img width=30 height=30 src="/image/avatar/{{uid}}_30"/><span>设置</span></a></li>
-							<li><a href="/account/logout/?next={{ request.uri }}"><img width=30 height=30 src="/image/avatar/{{uid}}_30"/><span>退出</span></a></li>
+	<body data-spy="scroll" data-target=".subnav" data-offset="50">
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<div class="nav-collapse">
+						<ul class="nav">
+							<li><a class="brand" href="/">远航户外</a></li>
+							<li class="divider-vertical"></li>
+							<li id="nav-weibo" class=""><a href="/weibo/">微博</a></li>
+							<li id="nav-event" class=""><a href="/event/">活动</a></li>
+							<li id="nav-write" class="" style="display:none;"><a href="">游记</a></li>
+							<li id="nav-second" class="" style="display:none;"><a href="">二手</a></li>
 						</ul>
-					</span>
-				{% else %}
-					<span><a class="fancybox fancybox.ajax" href="/account/login/?next={{ request.uri }}">登录</a></span>
-					<span><a  class="fancybox fancybox.frame" href="/account/thirdpart/"><img src="{{static_url('img/sina_24x24.png')}}"/></a></span>
-					<span><a class="fancybox fancybox.ajax" href="/account/register/?next={{ request.uri }}">注册</a></span>
-				{% end %}
+						<ul class="nav user_log pull-right">
+							{% if current_user %}
+							<li><a href="" style="display:none;">私信</a></li>
+							<li class="divider-vertical"></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+									<img src="/image/avatar/{{ uid }}_30" width=24 height=24 />&nbsp
+									{{ current_user }}<b class="caret"></b>
+								</a>
+								<ul class="nav-list dropdown-menu">
+									<li><a href="/account/profile/"><i class="icon-user"></i> &nbsp&nbsp&nbsp&nbsp个人主页</a></li>
+									<li><a href="/account/setting/"><i class="icon-cog"></i>&nbsp&nbsp&nbsp&nbsp 账户设置</a></li>
+									<li style="display:none;"><a href="/account/plugin/"><i class="icon-pencil"></i> &nbsp&nbsp&nbsp&nbsp订制应用</a></li>
+									<li style="display:none;"><a href="/account/carte/"><i class="icon-book"></i> &nbsp&nbsp&nbsp&nbsp户外名片</a></li>
+									<li class="divider"></li>
+									<li><a href="/account/logout/"><i class="icon-off"></i> &nbsp&nbsp&nbsp&nbsp退出</a></li>
+								</ul>
+							</li>
+							{% else %}
+							<li>
+								<form class="form-inline" style="margin-bottom:5px;" action="/account/login/" method="POST">
+									<input type="text" style="margin-top:5px;" class="input-small" placeholder="Email" name="nick">
+									<input type="password" style="margin-top:5px;" class="input-small" placeholder="Password" name="password">
+									<button type="submit" class="btn">登录</button>
+								</form>
+							</li>
+							<li class="divider-vertical"></li>
+							<li>
+								<a class="" data-toggle="modal" href="#register" >注册</a>
+							</li>
+							{% end %}
+						</ul>
+					</div>
 				</div>
 			</div>
-			<div id="bodier">
-				<div id="left">
-					{% if title %}<div id="title" style="width:765px;">{{title}}</div>{% end %}
+		</div>
+		
+		<div class="container">
+			<div class="row">
+				<div class="span9">
 					{% block bodyleft %}{% end %}
 				</div>
-				<div id="right">
-					{% if warning %}<div class="ardbox boxmg" style="width:200px;"><p><span id="warning" style="color:red;font-size:12px;">{{ warning }}</span></p></div>{% end %}
-					<div class="apkbox boxmg" style="width:200px;"><p><div id="alert"></div></p></div>
-					<div class="ablbox boxmg" style="width:200px;display:none;"><p><a>蓝色</a></p></div>
-					<div class="agrbox boxmg" style="width:200px;display:none;"><p><a>绿色</a></p></div>
-					<div class="aylbox boxmg" style="width:200px;display:none;"><p><a>黄色</a></p></div>
-					<div class="abrbox boxmg" style="width:200px;display:none;"><p><a>棕色</a></p></div>
+				
+				<div class="span3">
+					{% if warning %}<div class="well"><span class="label label-error">{{ warning }}</span></div>{% end %}
 					{% block bodyright %}{% end %}
 				</div>
 			</div>
-			<div id="footer">
-				<ul>
-					<li><a>免责声明</a></li>
-					<li><a>诚聘英才</a></li>
-					<li><a>联系方式</a></li>
-					<li><a>网站地图</a></li>
-					<li><a>备案</a></li>
-				</ul>
+			<footer class="footer">
+				{% block foot %}{% end %}
+				<p class="pull-right"><a href="#">回到顶部</a></p>
+				<p>七三工作室 (qq:149964633)</p>
+			</footer>
+		</div><!-- /container -->
+		<!-- Le javascript
+		================================================== -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<script type="text/javascript" src="{{ static_url('js/bs/widgets.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/prettify.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-alert.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-modal.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-transition.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-dropdown.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-scrollspy.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-tab.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-tooltip.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-popover.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-button.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-collapse.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-carousel.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-typeahead.js') }}"></script>
+		<script type="text/javascript" src="{{ static_url('js/bs/application.js') }}"></script>
+		<div id="register" class="modal hide fade">
+			<div class="modal-header">
+				<a class="close" data-dismiss="modal">×</a>
+				<h3>注册</h3>
+			</div>
+			<div class="modal-body">
+				<form action="/account/register/" method="post">
+					<span>&nbsp&nbsp&nbsp绰号：</span><input name="nick" type=text style="width:200px;height:30px;"/><br/>
+					<span>&nbsp&nbsp&nbsp邮件：</span><input name="email" type=text style="width:200px;height:30px;"/><br/>
+					<span>&nbsp&nbsp&nbsp密码：</span><input name="password" type=password style="width:200px;height:30px;"/><br/>
+					&nbsp&nbsp&nbsp&nbsp<input type=submit value="注册"/>
+				</form>
 			</div>
 		</div>
 	</body>
