--- a/htmls/profile/login.html
+++ b/htmls/profile/login.html
@@ -1,15 +1,52 @@
-{% extends ../box.html %}
-
-{% block static %}{% end %}
-{% block box %}
-	<div class="agrbox boxmg lucency" style="width:400px;height:300px;">
-		<div style="margin:60px 0 0 10px;">
-			<form action="/account/login/" method="POST">
-				<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
-				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
-				<input name="next" type=hidden value="{{ n }}"/>
-				<a href="/">点此注册</a><span style="padding-left:220px;"><input type=submit value="登录"/></span>
-			</form>
-		</div><br/>
-	</div>
-{% end %}
+<!DOCTYPE html>
+<html lang="cn">
+	<head>
+		<meta charset="utf-8">
+		<title>远航户外</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="驴友 户外 垂直 社区">
+		<meta name="author" content="一米七三">
+		<script src="{{ static_url('js/bs/html5.js') }}"></script>
+		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
+		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
+		<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
+		{% block static %}{% end %}
+		<link href="{{ static_url('css/frame.css') }}" rel="stylesheet">
+		<link href="{{ static_url('css/profile.css') }}" rel="stylesheet">
+		<link rel="shortcut icon" href="./favicon.ico">
+	</head>
+	<body data-spy="scroll" data-target=".subnav" data-offset="50">
+		<div class="container">
+			<div class="row">
+				<div class="span7"><h1>远航户外</h1></div>
+				<div class="span5">
+				<form action="/account/login/" method="post">
+					<span>&nbsp&nbsp&nbsp绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
+					<span>&nbsp&nbsp&nbsp密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
+					<div style="padding-left:100px;" class="social">
+						<input type=submit value="登录"/>
+						<a href="/auth/sina/" class="sina"></a>
+						<a href="/auth/qq/" class="qq"></a>
+						<a href="/auth/renren/" class="renren"></a>
+					</div>
+				</form>
+				</div>
+			</div>
+			<hr/>
+			<div class="row">
+			<div class="span12">
+				<form action="/account/register/" method="post">
+					<span>&nbsp&nbsp&nbsp绰号：</span><input name="nick" type=text style="width:200px;height:30px;"/>
+					<span>&nbsp&nbsp&nbsp邮件：</span><input name="email" type=text style="width:200px;height:30px;"/>
+					<span>&nbsp&nbsp&nbsp密码：</span><input name="password" type=password style="width:200px;height:30px;"/>
+					&nbsp&nbsp&nbsp&nbsp<input type=submit value="注册"/>
+				</form>
+			</div>
+			</div>
+			<footer class="footer">
+				<p class="pull-right"><a href="#">回到顶部</a></p>
+				<p>Designed and built with all the love in the world <a href="" target="_blank">@twitter</a> by <a href="" target="_blank">@mdo</a> and <a href="" target="_blank">@fat</a>.</p>
+			</footer>
+		</div><!-- /container -->
+	</body>
+</html>
