--- a/htmls/profile/register.html
+++ b/htmls/profile/register.html
@@ -1,7 +1,7 @@
 {% extends ../box.html %}
 
 {% block static %}{% end %}
-{% block box %}
+{% block bodyleft %}
 	<div class="agrbox boxmg lucency" style="width:400px;height:300px;">
 		<div style="margin:10px 0 0 10px;">
 			<form action="/account/register/" method="POST">
@@ -12,4 +12,8 @@
 			</form>
 		</div><br/>
 	</div>
+{% end %}
+
+{% block bodyright %}
+	{% if warning %}<div style="color:red;">{{ warning }}</div>{% end %}
 {% end %}
