--- a/htmls/profile/setting_alert.html
+++ b/htmls/profile/setting_alert.html
@@ -1,36 +1,26 @@
 {% extends ../frame.html %}
 
-{% block static %}
-	<script language="javascript" src="{{ static_url('js/jquery.uploadify.min.js') }}" type="text/javascript"></script>
-	<script language="javascript" type="text/javascript">
-		$(document).ready(function() {})
-	</script>
-	<link rel="stylesheet" type="text/css" href="{{ static_url('css/uploadify.css') }}"/>
-{% end %}
+{% block static %}{% end %}
 {% block bodyleft %}
-	<div id="tab">
-		<div class="Menubox">
-			<ul>
-				<li id="one1"><a href="/account/setting/">基本设置</a></li>
-				<li id="one2" class="hover">消息提示</li>
-				<li id="one3"><a href="/account/setting/thirdpart/">微博绑定</a></li>
-				<li id="one4" style="display:none;">邮件提醒</li>
-			</ul>
-		</div>
-		<div class="contentbox">
-			<div class="hover">
-				<form name="content-form" method="POST" action="/account/setting/">
-					<div class="li"><label class="lil">>新浪微博: <em class="needed"></em></label><div class="lir">
-						{% if ifNone('sina_access_token') %}
-							<a href="">已经绑定</a>
-						{% else %}
-							<a href="">绑定</a>
-						{% end %}
-					</div></div>
-					<div class="li"><label class="lil"><em class="needed"></em></label><div class="lir"><input onclick="$('form').submit();" type="button" value="提交"></div></div>
-				</form>
+	<ul class="nav nav-tabs pull-right">
+		<li><a href="/account/setting/">基本设置</a></li>
+		<li class="active"><a>消息设置</a></li>
+		<li><a href="/account/setting/thirdpart/">账号绑定</a></li>
+	</ul>
+	<form class="form-horizontal" name="content-form" method="POST" action="/account/setting/">
+		<fieldset>
+			<legend>消息设置</legend>
+			<div class="control-group">
+				<label class="control-label" for="textarea">名号:</label>
+				<div class="controls">
+					{% if ifNone(current_user) %}<span>{{current_user}}</span>{% else %}<input type="text" name="nick" value=""/>{% end %}
+				</div>
 			</div>
-		</div>
-	</div>
+			<div class="form-actions">
+				<button type="submit" class="btn btn-primary">完成</button>
+				<a class="btn" href="/accout/profile/" >取消</a>
+			</div>
+		</fieldset>
+	</form>
 {% end %}
 {% block bodyright %}{% end %}
