--- a/htmls/weibo/message.html
+++ b/htmls/weibo/message.html
@@ -3,10 +3,10 @@
 		<a href="" title="{{ message['nick'] }}"><img title="{{ message['nick'] }}" alt="{{ message['nick'] }}" width=50 height=50 src="/image/avatar/{{ message['owner'] }}_50"/></a>
 	</dt>
 	<dd class="content">
-		<p class="wb_item_content"><a title="{{ message['nick'] }}" href="">{{ message['nick'] }}</a>：<em>{{ message['content'] }}</em></p>
+		<p class="wb_item_content"><a title="{{ message['nick'] }}" href="">{{ message['nick'] }}</a>：{{ message['content'] }}</p>
 		<p class="wb_opt">
 			<span>
-				{% if message['is_own'] %}<em><a onclick="delItem(this);return false;" id="d-{{ message['id'] }}" class="remove">删除</a><i class="wb_vline">|</i></em>{% end %}
+				{% if message['is_own'] %}<a onclick="delItem(this);return false;" id="d-{{ message['id'] }}" class="remove">删除</a><i class="wb_vline">|</i>{% end %}
 				{% if uid %}<a onclick="Reply.toggle(this);return false;" id="r-{{ message['id'] }}" class="wb_reply">回复{% if message['count']>0 %}({{message['count']}}){% end %}</a>{% end %}
 			</span>
 			<d title="{{ message['created'] }}" class="date">{{ message['created'] }}</d>
