--- a/htmls/profile/setting_thirdpart.html
+++ b/htmls/profile/setting_thirdpart.html
@@ -2,14 +2,13 @@
 
 {% block static %}{% end %}
 {% block bodyleft %}
-	<ul class="nav nav-tabs pull-right">
+	<ul class="nav nav-tabs row-fluid">
 		<li><a href="/account/setting/">基本设置</a></li>
 		<li><a href="/account/setting/alert/">消息设置</a></li>
 		<li class="active"><a>账号绑定</a></li>
 	</ul>
-	<form class="form-horizontal" name="content-form" method="POST" action="/account/setting/">
+	<form class="form-horizontal row-fluid" name="content-form" method="POST" action="/account/setting/">
 		<fieldset>
-			<legend>账号绑定</legend>
 			<div class="control-group">
 				<label class="control-label" for="textarea">绑定新浪微博:</label>
 				<div class="controls">
