--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -6,16 +6,20 @@
 		$(document).ready(function() {
 			Weibo.init();
 			$('#nav-event').addClass("active");
-			})
+		})
 	</script>
 	{% block static-added %}{% end %}
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/event.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/weibo.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<div id="showdetail" class="well">
-		<img width=300 height=300 src="/image/attach/{{logo}}_300"/>
-		<div style="border-bottom:1px solid #FFCC00;">
+	<ul class="thumbnails">
+		<li class="span4">
+			<a href="#" class="thumbnail" style="width: 300px; height: 300px; overflow-x: hidden; overflow-y: hidden;">
+				<img width=300 height=300 src="/image/attach/{{logo}}_300" style="margin-top: -100px;"/>
+			</a>
+		</li>
+		<li class="span4">
 			<h4>活动信息</h4>
 			<p>发起人：{{ nick }}</p>
 			<p>发布日期：{{ created }}</p>
@@ -24,14 +28,16 @@
 			<p style="display:none;">路线：{{ route }}</p>
 			<p>活动地点：{{ place }}</p>
 			<p>活动开始时间：{{ date }}</p>
-		</div>
-		<p>计划安排：{{ schedule_tl }}</p>
-		<p>花费统计：{{ spend_tl }}</p>
-		<p style="display:none;">装备要求：{{ equip }}</p>
-		<p>{% if declare_tl %}免责声明：{{ declare_tl }}{% end %}</p>
-		<p>{% if attention_tl %}注意事项：{{ attention_tl }}{% end %}</p>
-		<p style="display:none;">人员配置：{{ members }}</p>
-	</div>
+		</li>
+		<li class="span8">
+			<p>计划安排：{{ schedule_tl }}</p>
+			<p>花费统计：{{ spend_tl }}</p>
+			<p style="display:none;">装备要求：{{ equip }}</p>
+			<p>{% if declare_tl %}免责声明：{{ declare_tl }}{% end %}</p>
+			<p>{% if attention_tl %}注意事项：{{ attention_tl }}{% end %}</p>
+			<p style="display:none;">人员配置：{{ members }}</p>
+		</li>
+	</ul>
 	<div style="clear:both;"></div>
 	<div id="weibo" name="weibo">
 		<div class="num" style="display:block;font-size:16px;margin-bottom:5px;">还可以输入
