--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -85,7 +85,7 @@
 			<footer class="footer">
 				{% block foot %}{% end %}
 				<p class="pull-right"><a href="#">回到顶部</a></p>
-				<p>七三工作室 (qq:149964633)</p>
+				<p>七三工作室 ( QQ:149964633 )</p>
 			</footer>
 		</div><!-- /container -->
 		<!-- Le javascript
