--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -60,7 +60,7 @@
 	</div>
 	{% end %}
 	
-	{% if uid == owner %}<div class="well"><a class="btn btn-warning" href="/event/{{ tid }}/approval/">报名审核</a></div>{% end %}
+	{% if uid == owner %}<div class="well"><a class="btn btn-warning" href="/event/{{ eid }}/approval/">报名审核</a></div>{% end %}
 	
 	<div class="well">
 		<h4>报名信息</h4>
