--- a/htmls/index.html
+++ b/htmls/index.html
@@ -12,9 +12,9 @@
 		<span>&nbsp&nbsp&nbsp密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
 		<div style="padding-left:100px;" class="social">
 			<input type=submit value="登录"/>
-			<a href="/auth/sina/" class="sina"></a>
-			<a href="/auth/qq/" class="qq"></a>
-			<a href="/auth/renren/" class="renren"></a>
+			<a style="display:none;" href="/auth/sina/" class="sina"></a>
+			<a style="display:none;" href="/auth/qq/" class="qq"></a>
+			<a style="display:none;" href="/auth/renren/" class="renren"></a>
 		</div>
 	</form>
 {% end %}
