--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -15,8 +15,8 @@
 {% block bodyleft %}
 	<ul class="thumbnails">
 		<li class="span4">
-			<a href="#" class="thumbnail" style="width: 300px; height: 300px; overflow-x: hidden; overflow-y: hidden;">
-				<img width=300 height=300 src="/image/attach/{{logo}}_300" style="margin-top: 0px;"/>
+			<a href="#" class="thumbnail">
+				<img width="300" height="300" src="/image/attach/{{logo}}_300"/>
 			</a>
 		</li>
 		<li class="span4">
