--- a/htmls/alert/item.html
+++ b/htmls/alert/item.html
@@ -1,1 +1,2 @@
-<li><a onclick="Alert.click(this);return false;" id="r-{{ message['id'] }}" subject="{{ message['subject'] }}" href="/alert/at/">有一条最新 <span class="badge badge-warning">{{ message['count'] }}</span> 条{{ message['suffix'] }}</a></li>
+{% import tornado.escape %}
+<div class="message" id="m{{ message["id"] }}">{{ tornado.escape.linkify(message["body"]) }}</div>
