--- a/htmls/alert/list.html
+++ b/htmls/alert/list.html
@@ -1,9 +1,16 @@
 {% extends ../box93.html %}
 
 {% block static %}
-	{% block static-added %}{% end %}
+	<script type="text/javascript" src="{{ static_url('js/swfobject.js') }}"></script>
+	<script type="text/javascript">
+		WEB_SOCKET_SWF_LOCATION = "{{ static_url('js/WebSocketMain.swf') }}";
+		WEB_SOCKET_DEBUG = true;
+	</script>
+	<script type="text/javascript" src="{{ static_url('js/web_socket.js') }}"></script>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/alert.css') }}"/>
-    <script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
+	<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
+	
+
 {% end %}
 {% block bodyleft %}
 	<div id="input">
