--- a/htmls/alert/list.html
+++ b/htmls/alert/list.html
@@ -3,7 +3,7 @@
 {% block static %}
 	<script type="text/javascript" src="{{ static_url('js/swfobject.js') }}"></script>
 	<script type="text/javascript">
-		WEB_SOCKET_SWF_LOCATION = "{{ static_url('js/WebSocketMain.swf') }}";
+		WEB_SOCKET_SWF_LOCATION = "static/js/WebSocketMain.swf";
 		WEB_SOCKET_DEBUG = true;
 	</script>
 	<script type="text/javascript" src="{{ static_url('js/web_socket.js') }}"></script>
