add alert moudle

--- a/htmls/check/event.html
+++ b/htmls/check/event.html
@@ -65,6 +65,7 @@
 <div class="tabbable tabs-right">
 	<ul class="nav nav-tabs">
 		<li class="active"><a>活动审核</a></li>
+		<li><a href="/check/tag/">标签管理</a></li>
 		<li style="display:none;"><a href="/check/people/">驴友审核</a></li>
 		<li style="display:none;"><a href="/check/weibo/">微博审核</a></li>
 	</ul>
