--- a/htmls/event/member.html
+++ b/htmls/event/member.html
@@ -13,15 +13,14 @@
 		{% for u in userlist %}
 		<li class="span3">
 			<a href="" class="thumbnail" style="min-height:100px;">
-				<div style="float:left; clear:right; margin-right:10px;"><img src="/image/avatar/{{u.get('owner', None)}}_100" width=80 height=80 /></div>
-				<h3>{{ u.get('nick', None) }}</h3>
+				<div style="float:left; clear:right; margin-right:10px;"><img src="/image/avatar/{{u.get('owner', None)}}_100" style="width:80px;height:80px;" width=80 height=80 /></div>
+				<h3>{{ u.get('nick', None) }}</h3><i style="color:gray;font-size:10px;">{{ u['created'] }}</i>
+				
 			</a>
 		</li>
 		{% end %}
 	</ul>
 {% end %}
 {% block bodyright %}
-	<div class="well">
-		<a href="/event/{{ eid }}/">回到活动</a>
-	</div>
+	<a class="btn" href="/event/{{ eid }}/">回到活动</a>
 {% end %}
