--- a/htmls/event/publish_step_one.html
+++ b/htmls/event/publish_step_one.html
@@ -35,6 +35,8 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/uploadify.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery-ui.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery.tags.css') }}"/>
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/tagit.ui-zendesk.css') }}"/>
+	
 {% end %}
 
 {% block bodyleft %}
