--- a/htmls/weibo/reply.html
+++ b/htmls/weibo/reply.html
@@ -1,5 +1,7 @@
 <dl id="m-{{ reply['id'] }}" class="comment_list">
-	<dt><a href=""><img width="30" height="30" alt="{{ reply['nick'] }}" src="/image/avatar/{{ reply['owner'] }}_30"></a></dt>
+	<dt><a href="" style="display:block;width:30px;height:30px;overflow-x:hidden;overflow-y:hidden;">
+		<img width="30" height="30" alt="{{ reply['nick'] }}" src="/image/avatar/{{ reply['owner'] }}_30">
+	</a></dt>
 	<dd>
 		<a href="">{{ reply['nick'] }}</a>: {{ reply['content'] }} ({{ reply['created'] }})
 		<p class="info">
