--- a/htmls/alert/item.html
+++ b/htmls/alert/item.html
@@ -1,2 +1,1 @@
-{% import tornado.escape %}
-<div class="message" id="m{{ message["id"] }}">{{ tornado.escape.linkify(message["body"]) }}</div>
+<div><a  onclick="Alert.click(this);return false;" id="r-{{ message['id'] }}" subject="{{ message['subject'] }}" href="#">最新 {{ message['count'] }} 条{{ message['suffix'] }}</a></div>
