--- a/htmls/alert/list.html
+++ b/htmls/alert/list.html
@@ -1,35 +1,25 @@
-{% extends ../box93.html %}
+{% extends ../frame.html %}
 
 {% block static %}
-	<script type="text/javascript" src="{{ static_url('js/swfobject.js') }}"></script>
-	<script type="text/javascript">
-		WEB_SOCKET_SWF_LOCATION = "static/js/WebSocketMain.swf";
-		WEB_SOCKET_DEBUG = true;
-	</script>
-	<script type="text/javascript" src="{{ static_url('js/web_socket.js') }}"></script>
+	{% block static-added %}{% end %}
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/alert.css') }}"/>
-	<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
-	
-
 {% end %}
 {% block bodyleft %}
-	<div id="input">
-		<form action="" method="post" id="messageform">
-			<table>
-				<tr>
-					<td><input type="text" name="body" id="message" style="width:500px"/></td>
-					<td style="padding-left:5px">
-						<input type="submit" value="{{ _('Post') }}"/>
-						<input type="hidden" name="next" value="{{ request.path }}"/>
-					</td>
-				</tr>
-			</table>
-		</form>
-	</div>
-	<div id="inbox">
-		{% for message in messages %}
-			{% include "item.html" %}
-		{% end %}
-	</div>
+	<table class="table table-condensed" style="background:white;">
+		<thead>
+			<tr>
+				<th>概要</th>
+				<th>操作</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for a in alert_list %}
+			<tr>
+				<td>{{a['nick']}}：{{ a['content'] }}</td>
+				<td><a href="/weibo/{{ a['id'] }}/">查看</a></td>
+			</tr>
+			{% end %}
+		</tbody>
+	</table>
 {% end %}
 {% block bodyright %}{% end %}
