--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/weibo.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<ul class="thumbnails">
+	<ul class="thumbnails" style="background:white;padding-top:20px;">
 		<li class="span4">
 			<a href="#" class="thumbnail">
 				<img width="300" height="300" src="/image/attach/{{logo}}_300"/>
@@ -56,7 +56,7 @@
 {% block bodyright %}
 	{% if user_list %}
 	<div class="well">
-		<a href="/event/{{ eid }}/member/">报名列表</a>
+		<a class="btn btn-info" href="/event/{{ eid }}/member/">报名列表</a>
 	</div>
 	{% end %}
 	
