--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -10,10 +10,13 @@
 		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
+		<script src="{{ static_url('js/jquery.noty.js') }}" type="text/javascript"></script>
+		<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
 		{% block static %}{% end %}
 		<link href="{{ static_url('css/bootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
+		<link href="{{ static_url('css/jquery.noty.css') }}" rel="stylesheet">
 		<link rel="shortcut icon" href="./favicon.ico">
 	</head>
 	<body data-spy="scroll" data-target=".subnav" data-offset="50">
@@ -40,8 +43,7 @@
 							<li class="divider-vertical"></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-									<img src="/image/avatar/{{ uid }}_30" width=24 height=24 />&nbsp
-									{{ current_user }}<b class="caret"></b>
+									<img src="/image/avatar/{{ uid }}_30" style="width:24px;height:24px;" width=24 height=24 />&nbsp{{ current_user }}<b class="caret"></b>
 								</a>
 								<ul class="nav-list dropdown-menu">
 									<li><a href="/account/profile/"><i class="icon-user"></i> &nbsp&nbsp&nbsp&nbsp个人主页</a></li>
@@ -76,7 +78,6 @@
 				<div class="span9">
 					{% block bodyleft %}{% end %}
 				</div>
-				
 				<div class="span3">
 					{% if warning %}<div class="well"><span class="label label-error">{{ warning }}</span></div>{% end %}
 					{% block bodyright %}{% end %}
@@ -84,7 +85,7 @@
 			</div>
 			<footer class="footer">
 				{% block foot %}{% end %}
-				<p class="pull-right"><a href="#">回到顶部</a></p>
+				<p class="pull-right"><a href="">回到顶部</a></p>
 				<p>七三工作室 ( QQ:149964633 )</p>
 			</footer>
 		</div><!-- /container -->
