--- a/htmls/weibo/index.html
+++ b/htmls/weibo/index.html
@@ -2,7 +2,6 @@
 
 {% block static %}
 	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
-	<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
 			$('#nav-weibo').addClass("active");
@@ -10,7 +9,6 @@
 		})
 	</script>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/weibo.css') }}"/>
-	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery.noty.css') }}"/>
 {% end %}
 {% block bodyleft %}
 	<div id="weibo">
@@ -30,6 +28,4 @@
 		</div>
 	</div>
 {% end %}
-{% block bodyright %}
-	<ul id="alert" class="well nav nav-pills nav-stacked"></ul>
-{% end %}
+{% block bodyright %}{% end %}
