--- a/htmls/event/publish_step_one.html
+++ b/htmls/event/publish_step_one.html
@@ -4,7 +4,7 @@
 	<script language="javascript" src="{{ static_url('js/jquery.uploadify.min.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/event.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/jquery-ui.min.js') }}" type="text/javascript"></script>
-	<script language="javascript" src="{{ static_url('js/tags.js') }}" type="text/javascript"></script>
+	<script language="javascript" src="{{ static_url('js/jquery.tags.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
 			$('#nav-event').addClass("active");
