--- a/htmls/check/event.html
+++ b/htmls/check/event.html
@@ -1,4 +1,4 @@
-{% extends ../box93.html %}
+{% extends ../box102.html %}
 
 {% block bodyleft %}
 	<div class="btn-toolbar pull-right">
@@ -68,6 +68,7 @@
 		<li><a href="/check/tag/">标签管理</a></li>
 		<li style="display:none;"><a href="/check/people/">驴友审核</a></li>
 		<li style="display:none;"><a href="/check/weibo/">微博审核</a></li>
+		<li style="display:none;"><a href="/check/club/">俱乐部审核</a></li>
 	</ul>
 </div>
 {% end %}
