--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -86,7 +86,8 @@
 			<footer class="footer">
 				{% block foot %}{% end %}
 				<p class="pull-right"><a href="">回到顶部</a></p>
-				<p>七三工作室 ( QQ:149964633 )</p>
+				<p>七三工作室 ( QQ:149964633 Q群:21986749 )</p>
+				<p></p>
 			</footer>
 		</div><!-- /container -->
 		<!-- Le javascript
