--- a/htmls/index.html
+++ b/htmls/index.html
@@ -5,7 +5,7 @@
 {% end %}
 {% block bodyleft %}
 	<div style="min-height:600px;">
-		<h1>远航户外</h1></br><a class="pull-left btn btn-primary" href="#register">注册加入</a>
+		<h1>北京户外网</h1></br><a class="pull-left btn btn-primary" href="#register">注册加入</a>
 	</div>
 {% end %}
 {% block bodyright %}
