--- a/htmls/box93.html
+++ b/htmls/box93.html
@@ -2,7 +2,7 @@
 <html lang="cn">
 	<head>
 		<meta charset="utf-8">
-		<title>远航户外</title>
+		<title>北京户外网</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="驴友 户外 垂直 社区">
 		<meta name="author" content="一米七三">
