--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -2,7 +2,7 @@
 <html lang="cn">
 	<head>
 		<meta charset="utf-8">
-		<title>远航户外</title>
+		<title>北京户外网</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="驴友 户外 垂直 社区">
 		<meta name="author" content="一米七三">
@@ -14,6 +14,7 @@
 		<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
 		{% block static %}{% end %}
 		<link href="{{ static_url('css/bootstrap.css') }}" rel="stylesheet">
+		<link href="{{ static_url('css/mybootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/jquery.noty.css') }}" rel="stylesheet">
@@ -30,12 +31,12 @@
 					</a>
 					<div class="nav-collapse">
 						<ul class="nav">
-							<li><a class="brand" href="/">远航户外</a></li>
+							<li><a class="brand" href="/">北京户外网</a></li>
 							<li class="divider-vertical"></li>
 							<li id="nav-weibo" class=""><a href="/weibo/">微博</a></li>
 							<li id="nav-event" class=""><a href="/event/">活动</a></li>
-							<li id="nav-write" class="" style="display:none;"><a href="">游记</a></li>
-							<li id="nav-second" class="" style="display:none;"><a href="">二手</a></li>
+							<li id="nav-note" style="display:none;"><a href="/note/">游记</a></li>
+							<li id="nav-second" style="display:none;"><a href="/second/">二手</a></li>
 						</ul>
 						<ul class="nav user_log pull-right">
 							{% if current_user %}
@@ -46,10 +47,10 @@
 									<img src="/image/avatar/{{ uid }}_30" style="width:24px;height:24px;" width=24 height=24 />&nbsp{{ current_user }}<b class="caret"></b>
 								</a>
 								<ul class="nav-list dropdown-menu">
-									<li><a href="/account/profile/"><i class="icon-user"></i> &nbsp&nbsp&nbsp&nbsp个人主页</a></li>
+									<li class="hide"><a href="/account/profile/"><i class="icon-user"></i> &nbsp&nbsp&nbsp&nbsp个人主页</a></li>
 									<li><a href="/account/setting/"><i class="icon-cog"></i>&nbsp&nbsp&nbsp&nbsp 账户设置</a></li>
-									<li style="display:none;"><a href="/account/plugin/"><i class="icon-pencil"></i> &nbsp&nbsp&nbsp&nbsp订制应用</a></li>
-									<li style="display:none;"><a href="/account/carte/"><i class="icon-book"></i> &nbsp&nbsp&nbsp&nbsp户外名片</a></li>
+									<li class="hide"><a href="/account/plugin/"><i class="icon-pencil"></i> &nbsp&nbsp&nbsp&nbsp订制应用</a></li>
+									<li class="hide"><a href="/account/carte/"><i class="icon-book"></i> &nbsp&nbsp&nbsp&nbsp户外名片</a></li>
 									<li class="divider"></li>
 									<li><a href="/account/logout/"><i class="icon-off"></i> &nbsp&nbsp&nbsp&nbsp退出</a></li>
 								</ul>
@@ -79,7 +80,7 @@
 					{% block bodyleft %}{% end %}
 				</div>
 				<div class="span3">
-					{% if warning %}<div class="well"><span class="label label-error">{{ warning }}</span></div>{% end %}
+					{% if warning %}<div class="well"><span class="label label-important">{{ warning }}</span></div>{% end %}
 					{% block bodyright %}{% end %}
 				</div>
 			</div>
